--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
  
 			
 			 <div class="product">
-			<img src="https://i.ibb.co/GPLCFrw/941-D4-F23-E897-4-B08-A113-5-ECDA16-EBB03.jpg" alt="image">
+			<img src="https://cydiainfo.tk/img/picsart.png" alt="image">
 			<div class="p-details">
-			   <h2>Video star</h2>
-			  <div class="get"><a href="https://is.gd/JI3Vj3">Download</a></div>
+			   <h2>Picsart pro</h2>
+			  <div class="get"><a href="itms-services:///?action=download-manifest&url=https://ios-hack.netlify.app/plist/picsart.plist">Download</a></div>
 			 </div>
 			</div>
 			
