--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
 			 </div>
 			</div>
 			
+			 <div class="product">
+			<img src="https://cydiainfo.tk/img/instagram.png" alt="image">
+			<div class="p-details">
+			   <h2>Instagram</h2>
+			  <div class="get"><a href="itms-services:///?action=download-manifest&url=https://ios-hack.netlify.app/plist/instagram.plist">Download</a></div>
+			 </div>
+			</div>
+			
 			
 		</div>
 	  </section>
