--- a/index.html
+++ b/index.html
@@ -201,6 +201,24 @@
 			</div>
 			
 			
+			 <div class="product">
+			<img src="https://cydiainfo.tk/img/capcut.png" alt="image">
+			<div class="p-details">
+			   <h2>CapCut pro</h2>
+			  <div class="get"><a href="https://is.gd/Vh40ne">Download</a></div>
+			 </div>
+			</div>
+			
+			
+			 <div class="product">
+			<img src="https://cydiainfo.tk/img/Scarlet.png" alt="image">
+			<div class="p-details">
+			   <h2>Scarlet</h2>
+			  <div class="get"><a href="https://is.gd/5mpWLE">Download</a></div>
+			 </div>
+			</div>
+			
+			
 		</div>
 	  </section>
 
