--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<img src="https://i.ibb.co/GPLCFrw/941-D4-F23-E897-4-B08-A113-5-ECDA16-EBB03.jpg" alt="image">
 			<div class="p-details">
 			   <h2>Video star</h2>
-			  <div class="get"><a href="https://is.gd/JI3Vj3">Download</a></div>
+			  <div class="get"><a href="https://is.gd/XKwmvf">Download</a></div>
 			 </div>
 			</div>
           
